<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_horizontal"
            android:text="@string/leave_form_title"
            android:textColor="@color/kb_blue"
            android:textSize="@dimen/title_font_size" />

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_form_border" >

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="10dip"
                    android:text="@string/leave_form_start_date"
                    android:textColor="@color/select_bule" >
                </TextView>

                <EditText
                    android:id="@+id/start_date_et"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:hint="@string/choice_date"
                    android:inputType="date"
                    android:maxLines="1"
                    android:singleLine="true" >
                </EditText>
            </TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/spider" />

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="10dip"
                    android:text="@string/leave_form_end_date"
                    android:textColor="@color/select_bule" >
                </TextView>

                <EditText
                    android:id="@+id/end_date_et"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:hint="@string/choice_date"
                    android:inputType="date"
                    android:maxLines="1"
                    android:singleLine="true" >
                </EditText>
            </TableRow>
        </TableLayout>

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_form_border" >

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="10dip"
                    android:text="@string/leave_form_tel"
                    android:textColor="@color/select_bule" >
                </TextView>

                <EditText
                    android:id="@+id/tel_et"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:singleLine="true" >
                </EditText>
            </TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/spider" />

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="10dip"
                    android:text="@string/leave_form_duration"
                    android:textColor="@color/select_bule" >
                </TextView>

                <EditText
                    android:id="@+id/duration_et"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:inputType="phone"
                    android:hint="@string/duration_hint"
                    android:maxLines="1"
                    android:singleLine="true" >
                </EditText>
            </TableRow>
        </TableLayout>

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_form_border" >

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="10dip"
                    android:text="@string/leave_form_type"
                    android:textColor="@color/select_bule" >
                </TextView>

                <EditText
                    android:id="@+id/type_et"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:inputType="text"
                    android:hint="@string/type_hint"
                    android:maxLines="1"
                    android:singleLine="true" >
                </EditText>
            </TableRow>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@drawable/spider" />

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="10dip" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="10dip"
                    android:text="@string/leave_form_reason"
                    android:textColor="@color/select_bule" >
                </TextView>

                <EditText
                    android:id="@+id/reason_et"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:inputType="text"
                    android:singleLine="true" >
                </EditText>
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="Button" />
    </LinearLayout>

</ScrollView>