<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white" >

    <!-- 表格布局 -->

    <TableLayout
        android:id="@+id/tableLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:background="@drawable/login_form_border" >

        <!-- 表格布局：第一行 -->

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dip"
                android:text="@string/tao_nick"
                android:textColor="@color/select_bule" >
            </TextView>

            <EditText
                android:id="@+id/user_nick_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:inputType="text"
                android:maxLength="20"
                android:maxLines="1" />
        </TableRow>

        <View
            android:id="@+id/spider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@drawable/spider" />
        <!-- 表格布局：第二行 -->

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dip" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="10dip"
                android:text="@string/password"
                android:textColor="@color/select_bule" >
            </TextView>

            <EditText
                android:id="@+id/psd_et"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:inputType="phone"
                android:singleLine="true"
                android:maxLines="1">
            </EditText>
        </TableRow>
    </TableLayout>
    
    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_above="@+id/tableLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/action_settings"
        android:src="@drawable/logo" />
    
    <Button
        android:id="@+id/submit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tableLayout1"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/login" />

</RelativeLayout>